--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "totp-generator": "^1.0.0",
     "tough-cookie": "^5.0.0"
   },
   "devDependencies": {
